data import functions combined

--- a/R/NEWS
+++ b/R/NEWS
@@ -4,3 +4,5 @@
 # ver 0.1.4 June 25 correct.hours corrected for summer time.., also added some stability to the movies
 # towards_0.3 ver 0.1.5 - functions 5.0 added
 # towards_0.4 ver 0.1.6 - brute force calibration and the whole bunch of small changes
+# ver 0.2.1 May 19 2015 - many changes...
+# ver 0.2.2 functions reorganized - unde development
