--- a/R/NEWS
+++ b/R/NEWS
@@ -1,4 +1,5 @@
 # what's new
+# ver 0.2.1 May 2015 Many changes with reorganizing the whole thing, putting functions in thematic files and so on
 # ver 0.0.2. May 15 2013 added median in the plotting function
 # ver 0.1.3 June 7 get.irradiance added
 # ver 0.1.4 June 25 correct.hours corrected for summer time.., also added some stability to the movies
