--- a/R/NEWS
+++ b/R/NEWS
@@ -1,9 +1,10 @@
 # what's new
-# ver 0.2.1 May 2015 Many changes with reorganizing the whole thing, putting functions in thematic files and so on
+
 # ver 0.0.2. May 15 2013 added median in the plotting function
 # ver 0.1.3 June 7 get.irradiance added
 # ver 0.1.4 June 25 correct.hours corrected for summer time.., also added some stability to the movies
 # towards_0.3 ver 0.1.5 - functions 5.0 added
 # towards_0.4 ver 0.1.6 - brute force calibration and the whole bunch of small changes
-# ver 0.2.1 May 19 2015 - many changes...
-# ver 0.2.2 functions reorganized - unde development
+# ver 0.2.1 May 2015 Many changes with reorganizing the whole thing, putting functions in thematic files and so on
+# ver 0.2.2 functions reorganized and the whole package is cleaned
+# all output is in the results section now.
