--- a/vignettes/tree_swallow_analysis.Rmd
+++ b/vignettes/tree_swallow_analysis.Rmd
@@ -4,3 +4,158 @@
 %\VignetteDepends{FLightR}
 -->
 # Tree swallow geolocator analysis
+this version is under development!!!
+## Install package and read data
+```{r}
+require(devtools)
+install_github("eldarrak/FLightR/0.2.3") # note the version
+require(FLightR)
+```
+###Download data from GitHub
+For now I will assume that one use the TAGS service (http://tags.animalmigration.org) and saved light-twilight data from there. Below we download data in the TAGS outpur format
+```{r}
+library(RCurl)
+text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightr/master/examples/MEE_manuscript_example/749.csv", ssl.verifypeer = FALSE, followlocation = TRUE)
+
+lig.raw<-read.csv(text=text, stringsAsFactors =F)
+```
+Now we have data read and we want to process them with the `read.tags.light.twilight()` function:
+```{r}
+FLightR.data<-read.tags.light.twilight(lig.raw, end.date="2012-05-12")
+
+```
+and process them with
+```{r}
+Proc.data<-process.twilights(FLightR.data$Data, FLightR.data$twilights, measurement.period=60, saving.period=120)
+```
+  -`measurement.period` - how often tag measures data (in seconds);
+  -`saving.period` - how often tag saves data (sec).
+Current tag measures data every minute (`measurement.period=60`) and saves maximum over 2 minutes (`saving.period=120`)
+
+start=c(-80.46,	42.62) # where the bird was captured...
+
+################################################
+## PART 2. Calibration
+################################################
+
+##----------------------------------------------
+##   Search for a proper calibration period 
+##   and manual check of outliers
+##----------------------------------------------
+
+## we need to select days when bird was in a known location
+## these are typically days in the beginning or in the end
+## of migration. To do we first will plot all sun slopes over 
+## the whole period and then will decide when is our calibration period
+
+Calibration.periods<-data.frame(calibration.start=as.POSIXct("2000-01-01"),calibration.stop=as.POSIXct("2020-01-01"), lon=start[1], lat=start[2])
+
+calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=F, log.light.borders=log(c(2, 63)),  log.irrad.borders=c(-1000, 1000))
+
+plot.slopes(calibration.parameters$All.slopes)
+
+abline(v=as.POSIXct("2012-04-11")) # fine
+abline(v=as.POSIXct("2011-07-13")) # fine
+
+#---------------------------------------
+# this is just for testing.
+# ok, so now we want to plot data for two periods..
+# and unfortunately we do not have s special functio for that..
+# so from Calib.data.all we need preset of points..
+
+#Calib.data<-Calib.data.all[Calib.data.all$Time<as.numeric(as.POSIXct("2011-07-13"))| Calib.data.all$Time>as.numeric(as.POSIXct("2012-04-11")),]
+
+#str(Calib.data)
+
+#plot(LogLight~LogIrrad, data=Calib.data, type="b")
+#as.POSIXct("2012-04-11"))]
+#as.POSIXct("2012-04-11"))
+# ok, we have to try -7, 1.5
+
+
+# after calibration
+# looks strange, so 
+
+Calibration.periods<-data.frame(calibration.start=as.POSIXct(c("2000-01-01", "2012-04-11") ),calibration.stop=as.POSIXct(c("2011-07-13", "2020-07-08")), lon=start[1], lat=start[2])
+
+log.irrad.borders=c(-5.75,1.5)
+calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=T, log.light.borders=log(c(2, 63)),  log.irrad.borders=log.irrad.borders)
+
+plot.slopes(calibration.parameters$All.slopes)
+
+
+ if (length(calibration.parameters$calib_outliers)>0) {
+ 
+FLightR.data$twilights$excluded[which(sapply(FLightR.data$twilights$datetime, FUN=function(x) min(abs(calib_outliers-as.numeric(x))))<3600)]<-1
+Proc.data<-process.twilights(FLightR.data$Data, FLightR.data$twilights[FLightR.data$twilights$excluded==0,], measurement.period=60, saving.period=120)
+calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=T, log.light.borders=log(c(2, 63)),  log.irrad.borders=log.irrad.borders)
+plot.slopes(calibration.parameters$All.slopes)
+}
+
+Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data, FLightR.data, log.light.borders=log(c(2,63)), log.irrad.borders=log.irrad.borders, start, ageing.model=calibration.parameters$ageing.model)
+############################
+
+library(parallel)
+Threads=detectCores()-1
+
+Outliers<-detect.tsoutliers(Calibration, Proc.data, plot=T, Threads=Threads, max.outlier.proportion=0.05, simple.version=F)
+
+# DO not run next if you do not want to exclude outliers
+Proc.data<-Outliers$Proc.data
+FLightR.data$twilights$excluded[which(!as.numeric(FLightR.data$twilights$datetime) %in% c(Proc.data$Twilight.time.mat.dusk[25,]+Calibration$Parameters$saving.period-Calibration$Parameters$measurement.period,  Proc.data$Twilight.time.mat.dawn[25,]) & FLightR.data$twilights$excluded!=1 )]<-2
+# end of outlier exclusion
+
+if (any(FLightR.data$twilights$datetime[FLightR.data$twilights$excluded==2]>=Calibration.start & FLightR.data$twilights$datetime[FLightR.data$twilights$excluded==2]<=Calibration.end)) {
+#--------------------------------------------------------
+# recalibration with outliers excluded..
+#--------------------------------------------------------
+
+#FLightR.data$twilights$excluded[which(FLightR.data$twilights$datetime <= as.POSIXct("2012-05-30"))]<-2
+Proc.data<-process.twilights(FLightR.data$Data, FLightR.data$twilights[FLightR.data$twilights$excluded==0,], measurement.period=60, saving.period=120)
+#---------------------------------
+
+calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=T, log.light.borders=log(c(2, 63)),  log.irrad.borders=log.irrad.borders)
+
+plot.slopes(calibration.parameters$All.slopes)
+
+Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data, FLightR.data, log.light.borders=log(c(2,63)), log.irrad.borders=log.irrad.borders, start, ageing.model=calibration.parameters$ageing.model)
+
+}
+
+Processed.light<-make.processed.light.object(FLightR.data)
+
+ylim = c(15, 45)
+xlim = c(-92, -70)
+
+Globe.Points<-regularCoordinates(200) # 50 km between each point
+
+All.Points.Focus<-Globe.Points[Globe.Points[,1]>xlim[1] & Globe.Points[,1]<xlim[2] & Globe.Points[,2]>ylim[1] & Globe.Points[,2]<ylim[2],]
+
+# here we could cut by the sea but we will not do it now
+
+plot(All.Points.Focus, type="n")
+map('state',add=TRUE, lwd=1,  col=grey(0.5))
+map('world',add=TRUE, lwd=1.5,  col=grey(0.8))
+abline(v=start[1])
+abline(h=start[2])
+
+Grid<-cbind(All.Points.Focus, Land=1)
+
+##########################################################
+## Part 4. Preestimation of all the matrices           ##
+##########################################################
+
+Index.tab<-create.proposal(Processed.light, start=start, Grid=Grid)
+
+Index.tab$Decision<-0.1 # prob of migration
+Index.tab$Direction<- 0 # direction 0 - North
+Index.tab$Kappa<-0 # distr concentration 0 means even
+Index.tab$M.mean<- 300 # distance mu
+Index.tab$M.sd<- 500 # distance sd
+
+all.in<-geologger.sampler.create.arrays(Index.tab, Grid, start=start, stop=start)
+
+# this parts are needed to promote repeatability..
+all.in$Calibration<-Calibration
+all.in$Data<-FLightR.data
+```
