--- a/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
+++ b/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
@@ -3,7 +3,9 @@
 %\VignetteIndexEntry{Tree swallow analysis}
 %\VignetteDepends{FLightR}
 -->
-# Tree swallow geolocator analysis
+
+
+ swallow geolocator analysis
 this version is under development!!!
 ## Install package and read data
 ```{r}
