--- a/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
+++ b/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
@@ -3,10 +3,30 @@
 %\VignetteIndexEntry{Tree swallow analysis}
 %\VignetteDepends{FLightR}
 -->
+# Bar tailed godwit analysis example
+# Intigeo tag
+## Install package and read data
+```{r}
+require(devtools)
+
+install_github("eldarrak/FLightR/0.2.5") # note the version
+
+require(FLightR)
+```
+##Download data from GitHub
+There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from James Fox. This file does not have defined twilights. There is plenty of ways to predefine twilights and here I will use the TAGS online service (http://tags.animalmigration.org). In order to process data to the TAGS format one should do following:
+1. Download [.lux](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed%20godwit_Intigeo_tag_example/E391_driftadj.lux) file into your working directory. I assume you will name it '749.csv'.
+2. open R and process .lux file:
+
+```{r} 
+# set wroking directory
+library(FLightE)
+process()
+
+```
 
 
- swallow geolocator analysis
-this version is under development!!!
+
 ## Install package and read data
 ```{r}
 require(devtools)
