--- a/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
+++ b/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
@@ -38,24 +38,29 @@ library(RCurl)
 text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed%20godwit_Intigeo_tag_example/E391.csv"
 , ssl.verifypeer = FALSE, followlocation = TRUE)
 lig.raw<-read.csv(text=text, stringsAsFactors =F)
+lig.raw$light<-exp(lig.raw$light) # this is needed because we log transformed data in convert.lux.to.tags()
+
 ```
 Now we have data read and we want to process them with the `read.tags.light.twilight()` function:
 ```{r}
-FLightR.data<-read.tags.light.twilight(lig.raw, end.date=as.POSIXct("2012-05-03"))
+FLightR.data<-read.tags.light.twilight(lig.raw, end.date="2014-05-17")
 
 ```
 and process them with
 ```{r}
 Proc.data<-process.twilights(FLightR.data$Data, FLightR.data$twilights, 
-                             measurement.period=60, saving.period=120)
+                             measurement.period=60, saving.period=300)
 ```
     -`measurement.period` - how often tag measures data (in seconds);
     -`saving.period` - how often tag saves data (sec).
-Current tag measures data every minute (`measurement.period=60`) and saves maximum over 2 minutes (`saving.period=120`)
+Current tag measures data every minute (`measurement.period=60`) and saves maximum over 2 minutes (`saving.period=300`)
 
 add calibration location as x,y
 ```{r}
-start=c(-80.46,	42.62) # where the bird was captured...
+start=c(5.43, 52.93)
+
+log.light.borders=c(2.5, 8)
+log.irrad.borders=c(-3,1.5)
 ```
 ## Part 2. Calibration
 We need to select days when bird was in a known location. These are typically days in the beginning or in the end the data. To do we first will plot all sun slopes over the whole period and then will decide when is our calibration period
@@ -65,8 +70,8 @@ Calibration.periods<-data.frame(calibration.start=as.POSIXct("2000-01-01"),
 								lon=start[1], lat=start[2])
 # note - we select dates outside the range 
 calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data,
-                            model.ageing=F, log.light.borders=log(c(2, 63)), 
-							log.irrad.borders=c(-1000, 1000))
+                            model.ageing=F, log.light.borders=log.light.borders, 
+							log.irrad.borders=log.irrad.borders)
 # and log irradiance boundaries also outside normal range  as we want to see the whole track first.
 
 plot.slopes(calibration.parameters$All.slopes)
