--- a/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
+++ b/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
@@ -136,8 +136,8 @@ Now it is very important to decide on whether we are going to exclude outliers o
 
 ```{r}
 # DO not run next if you do not want to exclude outliers!!!
-exclude.dected.outliers=T
-if (exclude.dected.outliers) {
+exclude.detected.outliers=T
+if (exclude.detected.outliers) {
 Proc.data<-Outliers$Proc.data
 FLightR.data$twilights$excluded[which(!as.numeric(FLightR.data$twilights$datetime) %in%
 	c(Proc.data$Twilight.time.mat.dusk[25,]+Calibration$Parameters$saving.period
