--- a/examples/tree_swallow_BAS_tag_example/tree_swallow_analysis.Rmd
+++ b/examples/tree_swallow_BAS_tag_example/tree_swallow_analysis.Rmd
@@ -1,5 +1,8 @@
 
 # Tree swallow BAS tag geolocator analysis
+This file is supplementart material for the FLightR paper:
+*A hidden Markov model for reconstructing animal paths from solar geolocation loggers using templates for light intensity*, Movement ecology (2015). http://dx.doi.org/10.1186/s40462-015-0062-5.
+I will not update this script.
 ## Install package and read data
 ```{r}
 require(devtools)
